--- a/index.html
+++ b/index.html
@@ -1,17 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
+        <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <title>Portfolio</title>
     </head>
     <body>
-        <img src="eu.jpeg" width="500px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
-        <h1 style="color: rgb(222, 245, 233); border: rgb(3, 15, 15);">Isabela Assunção</h1>
+        <div class="imagem">
+        <img src="eu.jpeg" width="200px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
+        </div> 
+        <h1>Isabela Assunção</h1>
         <p>
             My name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe. I'm interested in this
              area since I was 14 and started a computer thecnician course. </br>
              I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
              itself. Always looking for new things ˆ-ˆ  
+        </p>
+        <h3>My links</h3>
+        <p>
+            GitHub: <a href="https://github.com/Isabela-ac" style="color: rgb(229, 255, 115);">Isabela-ac</a></br>
+            LinkedIn: <a href="https://www.linkedin.com/feed/" style="color: rgb(229, 255, 115);">Isabela Assunção</a>
         </p>
 
     </body>
