cria pasta imgs, atualiza html e css

--- a/index.html
+++ b/index.html
@@ -6,21 +6,36 @@
         <title>Portfolio</title>
     </head>
     <body>
-        <div class="imagem">
-        <img src="eu.jpeg" width="200px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
-        </div> 
-        <h1>Isabela Assunção</h1>
-        <p>
-            My name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe. I'm interested in this
-             area since I was 14 and started a computer thecnician course. </br>
-             I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
-             itself. Always looking for new things ˆ-ˆ  
-        </p>
-        <h3>My links</h3>
-        <p>
-            GitHub: <a href="https://github.com/Isabela-ac" style="color: rgb(229, 255, 115);">Isabela-ac</a></br>
-            LinkedIn: <a href="https://www.linkedin.com/feed/" style="color: rgb(229, 255, 115);">Isabela Assunção</a>
-        </p>
-
+        <main class="intro">
+            <div id="menu">
+                <img class="menu" src="menu.png" alt="menu icon">
+            </div>
+            <div id="img">
+            <img id="imagem" src="images/eu.jpeg" width="200px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
+            </div> 
+            <h1>Isabela Assunção</h1>
+            <p>
+                Hi, my name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe.</br> I'm interested in this
+                area since I was 14 and started a computer thecnician course. </br>
+                I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
+                itself.</br> Always looking for new things ˆ-ˆ  
+            </p>
+        </main>
+        <section class="aboutme">
+            <h2>More about me:</h2>
+            <div class="content">
+                <div id="links">
+                    <h3>My links:</h3>
+                    <a href="https://github.com/Isabela-ac"><img id="gith" src="images/Octocat.png" alt="Logo github" width="150px"></a>
+                    <a href="https://www.linkedin.com/feed/"><img id="linked" src="images/linkedin.png" alt="Logo linkedIn" width="150px"></a>
+                </div>
+                <div id="itens">
+                    <h3>Languages:</h3>
+                    <img src="images/html.png" alt="logo HTML" width="130px">
+                    <img src="images/css.png" alt="logo CSS" width="130px">
+                    <img src="images/c.png" alt="logo C++" width="115px">
+                </div>
+            </div>
+        </section>
     </body>
 </html>
