--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
                 itself.</br> Always looking for new things ˆ-ˆ  
             </p>
         </main>
+        <!--
         <section class="aboutme">
             <h2>More about me:</h2>
             <div class="content">
                 <div id="links">
                     <h3>My links:</h3>
                     <a href="https://github.com/Isabela-ac"><img id="gith" src="images/Octocat.png" alt="Logo github" width="150px"></a>
-                    <a href="https://www.linkedin.com/feed/"><img id="linked" src="images/linkedin.png" alt="Logo linkedIn" width="150px"></a>
+                    <a href="https://www.linkedin.com/in/isabela-assuncao/"><img id="linked" src="images/linkedin.png" alt="Logo linkedIn" width="150px"></a>
                 </div>
                 <div id="itens">
                     <h3>Languages:</h3>
                     <img src="images/html.png" alt="logo HTML" width="130px">
                     <img src="images/css.png" alt="logo CSS" width="130px">
-                    <img src="images/c.png" alt="logo C++" width="115px">
+                    <img src="javas.png" alt="logo C++" width="110px">
                 </div>
             </div>
         </section>
+        -->
+        <script src="script.js"></script>
     </body>
 </html>
