--- a/index.html
+++ b/index.html
@@ -4,22 +4,35 @@
         <link rel="stylesheet" href="style.css">
         <meta charset="UTF-8">
         <title>Portfolio</title>
+        <!-- CSS only -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
+              rel="stylesheet" 
+              integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" 
+              crossorigin="anonymous">
     </head>
     <body>
-        <main class="intro">
-            <div id="menu">
-                <img class="menu" src="menu.png" alt="menu icon">
-            </div>
-            <div id="img">
-            <img id="imagem" src="images/eu.jpeg" width="200px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
-            </div> 
-            <h1>Isabela Assunção</h1>
-            <p>
-                Hi, my name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe.</br> I'm interested in this
-                area since I was 14 and started a computer thecnician course. </br>
-                I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
-                itself.</br> Always looking for new things ˆ-ˆ  
-            </p>
+        <main id="intro" class="bg-dark">
+            <nav id="menu">
+                <a class="navs" href=".intro"><p>About me</p></a>
+                <a class="navs"><p>Learning</p></a>
+                <a class="navs"><p>Contact</p></a>
+                <a class="navs"><p>Projects</p></a>
+            </nav>
+            <section id="content-intro">
+                <div id="img">
+                    <img id="imagem" src="images/eu2.png" width="200px" alt="Isabela's image. A girl with dark brown hair, glasses and a black sweater">
+                </div> 
+                <h1>Isabela Assunção</h1>
+                <p id="about-me">
+                    Hi, my name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe.
+                    I'm interested in this area since I was 14 and started a computer thecnician course.
+                    </br>I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
+                    itself. </br> Always looking for new things ˆ-ˆ  
+                </p>
+                <section id="footer-main">
+
+                </section>
+            </section>
         </main>
         <!--
         <section class="aboutme">
