--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </head>
     <body>
         <main id="intro" class="bg-dark">
-            <nav id="menu">
-                <a class="navs" href=".intro"><p>About me</p></a>
-                <a class="navs"><p>Learning</p></a>
+            <nav class="menu">
+                <a class="navs" href="#intro"><p>About me</p></a>
+                <a class="navs" href="#skills"><p>Skills</p></a>
                 <a class="navs"><p>Contact</p></a>
                 <a class="navs"><p>Projects</p></a>
             </nav>
@@ -29,28 +29,40 @@
                     </br>I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
                     itself. </br> Always looking for new things ˆ-ˆ  
                 </p>
-                <section id="footer-main">
-
-                </section>
             </section>
         </main>
-        <!--
-        <section class="aboutme">
-            <h2>More about me:</h2>
-            <div class="content">
-                <div id="links">
-                    <h3>My links:</h3>
-                    <a href="https://github.com/Isabela-ac"><img id="gith" src="images/Octocat.png" alt="Logo github" width="150px"></a>
-                    <a href="https://www.linkedin.com/in/isabela-assuncao/"><img id="linked" src="images/linkedin.png" alt="Logo linkedIn" width="150px"></a>
-                </div>
-                <div id="itens">
-                    <h3>Languages:</h3>
-                    <img src="images/html.png" alt="logo HTML" width="130px">
-                    <img src="images/css.png" alt="logo CSS" width="130px">
-                    <img src="javas.png" alt="logo C++" width="110px">
-                </div>
-            </div>
+        <section id="skills-section">
+            <nav class="menu menu-skills">
+                <a class="navs-skills" href="#intro"><p>About me</p></a>
+                <a class="navs-skills" href="#skills"><p>Skills</p></a>
+                <a class="navs-skills"><p>Contact</p></a>
+                <a class="navs-skills"><p>Projects</p></a>
+            </nav>
+            <h2 id="title-skills" class="display-4 fw-normal text-center pb-md-4">My Skills:</h2>
+            <section id="skills">
+                <section id="content-skills">
+                    <div class="skills-itens rounded-3">
+                        <h4>HTML</h4>
+                        <img class="skills-img rounded-3" src="./images/html.png" alt="HTML logo"/>
+                    </div>
+                    <div class="skills-itens rounded-3">
+                        <h4>CSS</h4>
+                        <img class="skills-img rounded-3" src="./images/css.png" alt="CSS logo"/>
+                    </div>
+                    <div class="skills-itens rounded-3">
+                        <h4>JAVASCRIPT</h4>
+                        <img class="skills-img rounded-3" src="./images/javascript.svg" alt="JavaScript logo"/>
+                    </div>
+                    <div class="skills-itens rounded-3">
+                        <h4>BOOTSTRAP</h4>
+                        <img class="skills-img rounded-3" src="./images/bootstrap.svg" alt="JavaScript logo"/>
+                    </div>
+                </section>
+            </section>
         </section>
+        <!--
+            https://getbootstrap.com/docs/5.1/examples/carousel/?#
+            página de projetos, html separado
         -->
         <script src="script.js"></script>
     </body>
