Adiciona seção contact

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <main id="intro" class="bg-dark">
             <nav class="menu">
                 <a class="navs" href="#intro"><p>About me</p></a>
-                <a class="navs" href="#skills"><p>Skills</p></a>
-                <a class="navs"><p>Contact</p></a>
+                <a class="navs" href="#skills-section"><p>Skills</p></a>
+                <a class="navs" href="#contact"><p>Contact</p></a>
                 <a class="navs"><p>Projects</p></a>
             </nav>
             <section id="content-intro">
@@ -24,8 +24,8 @@
                 </div> 
                 <h1>Isabela Assunção</h1>
                 <p id="about-me">
-                    Hi, my name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 19 and a web developer student at Trybe.
-                    I'm interested in this area since I was 14 and started a computer thecnician course.
+                    Hi, my name is Isabela, I'm from Barretos (São Paulo, Brazil), I'm 20 and a web developer student at Trybe.
+                    I'm interested in this area since I was 14 when I started a computer thecnician course.
                     </br>I like to learn all I can, in different areas, you can say I'm a curious about the knowlodge
                     itself. </br> Always looking for new things ˆ-ˆ  
                 </p>
@@ -34,8 +34,8 @@
         <section id="skills-section">
             <nav class="menu menu-skills">
                 <a class="navs-skills" href="#intro"><p>About me</p></a>
-                <a class="navs-skills" href="#skills"><p>Skills</p></a>
-                <a class="navs-skills"><p>Contact</p></a>
+                <a class="navs-skills" href="#skills-section"><p>Skills</p></a>
+                <a class="navs-skills" href="#contact"><p>Contact</p></a>
                 <a class="navs-skills"><p>Projects</p></a>
             </nav>
             <h2 id="title-skills" class="display-4 fw-normal text-center pb-md-4">My Skills:</h2>
@@ -58,6 +58,35 @@
                         <img class="skills-img rounded-3" src="./images/bootstrap.svg" alt="JavaScript logo"/>
                     </div>
                 </section>
+            </section>
+        </section>
+        <section id="contact" class="bg-dark">
+            <nav class="menu">
+                <a class="navs" href="#intro"><p>About me</p></a>
+                <a class="navs" href="#skills-section"><p>Skills</p></a>
+                <a class="navs" href="#contact"><p>Contact</p></a>
+                <a class="navs"><p>Projects</p></a>
+            </nav>
+            <section id="content-contact">
+                <h3 class="display-4 fw-normal text-center pb-md-4">Find me on these medias:</h3>
+                <section id="medias">
+                    <section class="contact-item">
+                        <a href="https://www.linkedin.com/in/isabela-assuncao/" target="_blank">
+                            <img class="contact-img" src="images/linkedin.png" alt="linkedIn logo">
+                        </a>
+                    </section>
+                    <section class="contact-item">
+                       <a href="https://github.com/Isabela-ac" target="_blank">
+                           <img class="contact-img" src="images/github.svg" alt="Github logo">
+                        </a>
+                    </section>
+                    <section class="contact-item">
+                        <a href="https://www.instagram.com/is.a.bela_c/" target="_blank">
+                            <img class="contact-img" src="images/instagram.svg" alt="Instagram logo">
+                        </a>
+                    </section>
+                </section>
+                <p id="gmail">isa.btssp2015@gmail.com</p>
             </section>
         </section>
         <!--
